# Byfl

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  LICENSE.md  Makefile  Makefile.am  Makefile.common.in  Makefile.db.in  Makefile.llvm.config.in  Makefile.llvm.rules  Notes  README.md  acinclude.m4  autogen.sh  bootstrap.sh  build-llvm-byfl  config.h.in  configure.ac  gen_opcode2name
autoconf/: configure.ac
cmake/: ByflCPack.cmake  ByflUtilities.cmake
include/: CMakeLists.txt  Makefile.am  binarytagdefs.h  byfl-common.h  byfl.h
lib/: CMakeLists.txt  Makefile  Makefile.am
lib/byfl/: CMakeLists.txt  CallStack.cpp  CallStack.h  Makefile  Makefile.am  basicblocks.cpp  binaryoutput.cpp  binaryoutput.h  binarytagdefs.h  bitpagetable.h  byfl-binary.cpp  byfl-db-stubs.cpp  byfl-db.cpp  byfl.cpp  byfl.h  cache-model.cpp  cachemap.h  callstack.cpp  callstack.h  datastructs.cpp  findsrc.cpp  findsrc.h  gen_opcode2name  opcode2name  pagetable.cpp  pagetable.h  papi_sde.c  papi_sde.cpp  papi_sde.h  papi_sde_interface.c  papi_sde_interface.h  reuse-dist.cpp  strides.cpp  symtable.cpp  tallybytes.cpp  threading.cpp  ubytes.cpp  vectors.cpp
lib/bytesflops/: BytesMP.cpp  BytesMP.h  CMakeLists.txt  FunctionKeyGen.cpp  FunctionKeyGen.h  Makefile  Makefile.am  MersenneTwister.cpp  MersenneTwister.h  bytesflops.cpp  bytesflops.h  functionkeygen.cpp  functionkeygen.h  helpers.cpp  helpers.h  init.cpp  instrument.cpp  mersennetwister.cpp  mersennetwister.h  symbolinfo.cpp
lib/common/: Makefile
lib/include/: Makefile  Makefile.am  byfl-binary.h  byfl-common.h
tests/: CMakeLists.txt  Makefile.am  bf-clang++-no-opts.sh  bf-clang-many-opts.sh  bf-clang-no-opts.sh  bf-flang-no-opts.sh  bf-gcc-no-opts.sh  bfbin2cgrind.sh  bfbin2csv.sh  bfbin2hdf5.sh  bfbin2hpctk.sh  bfbin2sqlite3.sh  bfbin2xmlss.sh  simple.c  simple.cpp  simple.f90
tools/: CMakeLists.txt  Makefile  Makefile.am
tools/db/: byfltables.py
tools/postproc/: CMakeLists.txt  Makefile  Makefile.am  bf-parse-cache-dump  bf2cgrind  bf2hpctk  bf2mysql.cpp  bf_process_byfl_file.pod  bfbin-swig.h  bfbin.h  bfbin2cgrind.cpp  bfbin2cgrind.pod  bfbin2csv.cpp  bfbin2csv.pod  bfbin2hdf5.cpp  bfbin2hdf5.pod  bfbin2hpctk.cpp  bfbin2hpctk.h  bfbin2hpctk.pod  bfbin2netcdf.c  bfbin2py.in  bfbin2sqlite3.cpp  bfbin2sqlite3.pod  bfbin2sqlite3.rst  bfbin2text.cpp  bfbin2xlxml.cpp  bfbin2xlxml.pod  bfbin2xmlss.cpp  bfbin2xmlss.pod  bfmerge  parsebfbin-swig.c  parsebfbin.c
tools/wrappers/: CMakeLists.txt  Makefile  Makefile.PL  Makefile.am  ParseCompilerOpts.pm  ParseGccOpts.pm  bf-clang.in  bf-gcc  bf-gcc.in  bf-inst  bf-inst.in  byfl-clang.pc.in  make-bf-mpi
tools/wrappers/lib/: ParseGccOpts.pm
